--- a/BattleBall/BattleBall.csproj
+++ b/BattleBall/BattleBall.csproj
@@ -35,13 +35,27 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="BattleEnvironment.cs" />
+    <Compile Include="Communication\Incoming\IncomingEvent.cs" />
+    <Compile Include="Communication\Incoming\Rooms\Login.cs" />
+    <Compile Include="Communication\Incoming\Rooms\RequestChat.cs" />
+    <Compile Include="Communication\Incoming\Rooms\RequestMap.cs" />
+    <Compile Include="Communication\Incoming\Rooms\RequestMovement.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\ChatComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\LoginOkComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\MapComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\PlayerMovementComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\PlayerRemoveComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\SerializeRoomUserComposer.cs" />
+    <Compile Include="Communication\Protocol\ServerOpCodes.cs" />
+    <Compile Include="Core\Authenticator.cs" />
     <Compile Include="Core\Game.cs" />
     <Compile Include="Core\GameClients\GameClient.cs" />
     <Compile Include="Core\GameClients\GameClientManager.cs" />
-    <Compile Include="Core\GameClients\Messages\ClientMessage.cs" />
-    <Compile Include="Core\GameClients\Messages\GameClientMessageHandler.cs" />
-    <Compile Include="Core\GameClients\Messages\ServerMessage.cs" />
-    <Compile Include="Core\GameClients\OpCodes.cs" />
+    <Compile Include="Communication\Protocol\ClientMessage.cs" />
+    <Compile Include="Core\GameClients\OldGameClientMessageHandler.cs" />
+    <Compile Include="Communication\Protocol\ServerMessage.cs" />
+    <Compile Include="Communication\Protocol\ClientOpCodes.cs" />
+    <Compile Include="Core\GameClients\GameClientMessageHandler.cs" />
     <Compile Include="Core\Rooms\Room.cs" />
     <Compile Include="Core\Rooms\MapModel.cs" />
     <Compile Include="Core\User.cs" />
