--- a/BattleBall/BattleBall.csproj
+++ b/BattleBall/BattleBall.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Communication\Incoming\Rooms\RequestLookAt.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestMap.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestMovement.cs" />
+    <Compile Include="Communication\Incoming\Rooms\RequestWave.cs" />
     <Compile Include="Communication\Outgoing\Rooms\ChatComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\LoginOkComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\MapComposer.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Core\GameClients\GameClientMessageHandler.cs" />
     <Compile Include="Core\Rooms\Room.cs" />
     <Compile Include="Core\Rooms\MapModel.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\WaveComposer.cs" />
     <Compile Include="Core\User.cs" />
     <Compile Include="Misc\Logging.cs" />
     <Compile Include="Core\Rooms\RoomUser.cs" />
