Experimental furni interacting

--- a/BattleBall/BattleBall.csproj
+++ b/BattleBall/BattleBall.csproj
@@ -38,12 +38,14 @@
     <Compile Include="Communication\Incoming\IncomingEvent.cs" />
     <Compile Include="Communication\Incoming\Rooms\Login.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestChat.cs" />
+    <Compile Include="Communication\Incoming\Rooms\RequestFurniInteract.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestLookAt.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestRoomData.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestMap.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestMovement.cs" />
     <Compile Include="Communication\Incoming\Rooms\RequestWave.cs" />
     <Compile Include="Communication\Outgoing\Rooms\ChatComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\FurniStateComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\LoginOkComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\MapComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\PlayerMovementComposer.cs" />
@@ -62,11 +64,16 @@
     <Compile Include="Core\GameClients\GameClientMessageHandler.cs" />
     <Compile Include="Core\Items\BaseItem.cs" />
     <Compile Include="Core\Items\BaseItemManager.cs" />
+    <Compile Include="Core\Items\ItemType.cs" />
     <Compile Include="Core\Rooms\GameMap.cs" />
+    <Compile Include="Core\Rooms\Items\InteractorGeneric.cs" />
+    <Compile Include="Core\Rooms\Items\InteractorNone.cs" />
+    <Compile Include="Core\Rooms\Items\RoomItemInteractor.cs" />
+    <Compile Include="Core\Rooms\Items\RoomItemManager.cs" />
     <Compile Include="Core\Rooms\Room.cs" />
     <Compile Include="Core\Rooms\MapModel.cs" />
     <Compile Include="Communication\Outgoing\Rooms\WaveComposer.cs" />
-    <Compile Include="Core\Rooms\RoomItem.cs" />
+    <Compile Include="Core\Rooms\Items\RoomItem.cs" />
     <Compile Include="Core\User.cs" />
     <Compile Include="Misc\Logging.cs" />
     <Compile Include="Core\Rooms\RoomUser.cs" />
