--- a/BattleBall/BattleBall.csproj
+++ b/BattleBall/BattleBall.csproj
@@ -48,9 +48,9 @@
     <Compile Include="Communication\Outgoing\Rooms\FurniStateComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\LoginOkComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\MapComposer.cs" />
-    <Compile Include="Communication\Outgoing\Rooms\PlayerMovementComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\FurniRemoveComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\PlayerRemoveComposer.cs" />
+    <Compile Include="Communication\Outgoing\Rooms\SerializeRoomUserStatus.cs" />
     <Compile Include="Communication\Outgoing\Rooms\SerializeWallItemComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\SerializeRoomItemComposer.cs" />
     <Compile Include="Communication\Outgoing\Rooms\SerializeRoomUserComposer.cs" />
@@ -72,6 +72,7 @@
     <Compile Include="Core\Rooms\Items\RoomItemInteractor.cs" />
     <Compile Include="Core\Rooms\Items\RoomItemManager.cs" />
     <Compile Include="Core\Rooms\Items\WallItem.cs" />
+    <Compile Include="Core\Rooms\Pathfinding\DreamPathfinder.cs" />
     <Compile Include="Core\Rooms\Room.cs" />
     <Compile Include="Core\Rooms\MapModel.cs" />
     <Compile Include="Communication\Outgoing\Rooms\WaveComposer.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="Core\User.cs" />
     <Compile Include="Misc\Logging.cs" />
     <Compile Include="Core\Rooms\RoomUser.cs" />
+    <Compile Include="Misc\TextHandling.cs" />
     <Compile Include="Net\ConnectionManager.cs" />
     <Compile Include="Net\ISocketHandler.cs" />
     <Compile Include="Program.cs" />
